refactor#154 :: 8~11교시로 하도록 전환